オンライン機能追加

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -70,6 +70,7 @@
       <button id="resetBtn">リセット</button>
       <button id="swapSidesBtn">サイド入れ替え（上下反転）</button>
       <button id="clearSelBtn">選択解除（ESC）</button>
+      <button id="onlineConnectBtn">サーバ接続</button>
     </div>
 
     <div class="row note">
