--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -85,7 +85,7 @@
 </div>
 
 <!-- 分割した JS を読み込み -->
-<script src="js/game.js"></script>
+<script type="module" src="js/game.js"></script>
 </body>
 </html>
 ``
