--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -86,6 +86,7 @@
 
 <!-- 分割した JS を読み込み -->
 <script type="module" src="js/game.js"></script>
+<script type="module" src="js/photon_src.js"></script>
 </body>
 </html>
 ``
