Add Photon library script to index.hbs

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -87,6 +87,7 @@
 <!-- 分割した JS を読み込み -->
 <script type="module" src="js/game.js"></script>
 <script type="module" src="js/photon_src.js"></script>
+<script src="Photon/photon.min.js"></script>
 </body>
 </html>
 ``
