--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -104,7 +104,7 @@
       <button id="resetBtn">リセット</button>
       <button id="swapSidesBtn">サイド入れ替え（上下反転）</button>
       <button id="clearSelBtn">選択解除（ESC）</button>
-      <button id="onlineConnectBtn">サーバ接続</button>
+      <a href="/tictactoe">三目並べ_ずらしを開く</a>
     </div>
 
     <div class="row note">
